Squashed commit of the following:
commit 8d85bce229b54819ce32b5941bf6687bdcfef743
Merge: 30470fd 2eafadf
Author: tanotosh <158192561+tanotosh@users.noreply.github.com>
Date:   Thu Dec 12 23:10:43 2024 -0500

    Merge pull request #103 from tanotosh/GaMicc-patch-4

    --

commit 30470fd1c3c3dc0a9d1a197742e5e24df157d642
Merge: 08f6e10 6dce75c
Author: Jiya Garg <63742493+jiyag@users.noreply.github.com>
Date:   Thu Dec 12 21:15:03 2024 -0500

    deleting log out interactor

commit 08f6e101e443900b5720ddc15bb71b224a390c25
Author: Jiya Garg <63742493+jiyag@users.noreply.github.com>
Date:   Thu Dec 12 20:28:49 2024 -0500

    deleting log out interactor test

commit ebe26d84c4548ce1c45eb219e0b36a5a67384579
Author: jiya garg <jea.garg@outlook.com>
Date:   Thu Dec 12 18:44:43 2024 -0500

    deleting unused logout files from homework 5

commit 1bee664883d7ab773d090194cc5548c48c463125
Author: jiya garg <jea.garg@outlook.com>
Date:   Thu Dec 12 18:43:33 2024 -0500

    fixed signup, login and logout interacters, added database DAO tests.

commit 6dce75c5489ee1b0dc59d6c9f48bab345c34ef1b
Merge: 276c828 4ee505d
Author: tanotosh <158192561+tanotosh@users.noreply.github.com>
Date:   Thu Dec 12 15:09:17 2024 -0500

    Merge pull request #101 from tanotosh/GaMicc-patch-4

    Missed Refactored Method Name update